added taxon for selecting and fixed products select box

--- a/app/views/spree/blogs/admin/post_products/_related_products_table.html.erb
+++ b/app/views/spree/blogs/admin/post_products/_related_products_table.html.erb
@@ -1,9 +1,9 @@
 <table class="table table-bordered table-striped index blog-related-products">
   <thead>
     <tr>
-      <th><%= t(:sku) %></th>
-      <th colspan="2"><%= t(:name) %></th>
-      <th><%= t(:master_price) %></th>
+      <th><%= Spree.t(:sku) %></th>
+      <th colspan="2"><%= Spree.t(:name) %></th>
+      <th><%= Spree.t(:master_price) %></th>
       <th data-hook="admin_products_index_header_actions" class="actions"></th>
     </tr>
   </thead>
