--- a/app/views/spree/blogs/admin/post_images/index.html.erb
+++ b/app/views/spree/blogs/admin/post_images/index.html.erb
@@ -6,8 +6,8 @@
 <table class="index sortable table table-bordered" data-sortable-link="<%= update_positions_admin_post_images_url(@post) -%>">
   <thead>
     <tr>
-      <th><%= t("thumbnail") %></th>
-      <th><%= t("alt_text") %></th>
+      <th><%= Spree.t("thumbnail") %></th>
+      <th><%= Spree.t("alt_text") %></th>
       <th class="actions"></th>
     </tr>
   </thead>
@@ -28,19 +28,19 @@
 
 <% content_for :page_actions do %>
   <li id="new_product_link">
-    <%= button_link_to t("new_image"), new_admin_post_image_url(@post), :id => "new_image_link", icon: 'icon-plus', class: 'btn-success' %>
+    <%= button_link_to Spree.t("new_image"), new_admin_post_image_url(@post), :id => "new_image_link", icon: 'icon-plus', class: 'btn-success' %>
   </li>
 <% end %>
 
 <% content_for :head do %>
   <script type="text/javascript">
-    jQuery(document).ready(function(){
+    $(document).ready(function(){
 
-      jQuery('#new_image_link').click(function (event) {
+      $('#new_image_link').click(function (event) {
         event.preventDefault();
-        jQuery(this).hide();
-        jQuery.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){
-            jQuery('#images').html(r);
+        $(this).hide();
+        $.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){
+            $('#images').html(r);
             $('#new_post_image').closest('#main-part').css('margin-left', '15px');
           }
         });
