--- a/app/views/spree/blogs/admin/posts/_form.html.erb
+++ b/app/views/spree/blogs/admin/posts/_form.html.erb
@@ -15,7 +15,8 @@
 <div class="omega six columns">
   <%= f.field_container :posted_at do %>
     <%= f.label :posted_at, t("activerecord.attributes.post.posted_at") %><br />
-    <%= f.text_field :posted_at, :class => 'text form-control', :value => ((l @object.posted_at, :fat => :long) unless @object.posted_at.nil?) %><br />
+    <%#= f.text_field :posted_at, :class => 'text form-control', :value => ((l @object.posted_at, :fat => :long) unless @object.posted_at.nil?) %><br />
+    <%= f.text_field :posted_at, :class => 'datepicker form-control', :value => ((l @object.posted_at, :fat => :long) unless @object.posted_at.nil?)%>
     <%= error_message_on :post, :posted_at %>
   <% end %>
 </div>
@@ -48,18 +49,12 @@
 
 <%= f.field_container :posted_at do %>
   <%= f.label :expires_at, "Akcija poteče" %><br />
-  <%= f.text_field :expires_at, :class => 'form-control', :value => ((l @object.expires_at, :format => :date_time) unless @object.expires_at.nil?) %><br />
+  <%#= f.text_field :expires_at, :class => 'form-control', :value => ((l @object.expires_at, :format => :date_time) unless @object.expires_at.nil?) %>
+  <%= f.text_field :expires_at, :class => 'datepicker form-control', :value => ((l @object.expires_at, :format => :date_time) unless @object.expires_at.nil?)%>
+  <br />
   <%= error_message_on :post, :expires_at %>
 <% end %>
 
 <%= f.field_container :live do %>
   <%= f.check_box :live %> <%= f.label :live, t("activerecord.attributes.post.live") %><br />
-<% end %>
-
-<% content_for :head do %>
-  <script type="text/javascript">
-    $(document).ready(function() {
-      $('#post_posted_at').autodate();
-    });
-  </script>
 <% end %>
