--- a/app/views/spree/blogs/admin/post_categories/index.html.erb
+++ b/app/views/spree/blogs/admin/post_categories/index.html.erb
@@ -22,14 +22,14 @@
       </table>
       <%= hidden_field_tag "post[post_category_ids][]", 0 %>
       <%= hidden_field_tag :redirect_to, request.fullpath %>
-      <%= button t("update") %>
+      <%= button Spree.t("update") %>
     </fieldset>
   <% end %>
 </div>
 
 <% content_for :page_actions do %>
   <li id="new_category_link">
-    <%= button_link_to t('.new_category'), new_object_url, { :icon => 'icon-plus', :id => 'btn_new_category', :class => 'btn-success' } %>
+    <%= button_link_to Spree.t('new_category'), new_object_url, { :icon => 'icon-plus', :id => 'btn_new_category', :class => 'btn-success' } %>
   </li>
 <% end %>
 
